#27 - Header displays correctly on mobile devices

--- a/src/app/header/profile.component.css
+++ b/src/app/header/profile.component.css
@@ -37,6 +37,6 @@
 
 @media only screen and (max-width : 640px) {
     .profile-info {
-        visibility: hidden;
+        display: none;
     }
 }
